fix version and update path copy

--- a/src/sekoPack.csproj
+++ b/src/sekoPack.csproj
@@ -30,4 +30,13 @@
     <Delete Files="@(RemovePlugins)" />
   </Target>
 
+  <Target Name="CopyToModFolder" AfterTargets="PostBuildEvent">
+    <ItemGroup>
+      <OutputFiles Include="$(OutputPath)\$(AssemblyName).dll" />
+      <OutputFiles Include="$(OutputPath)\$(AssemblyName).pdb" Condition="'$(Configuration)'=='Debug'" />
+    </ItemGroup>
+    
+    <Copy SourceFiles="@(OutputFiles)" DestinationFolder="$(MSBuildProjectDirectory)\..\mod\newest\plugins" />
+    </Target>
+
 </Project>
